# rastreo

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  SECURITY.md  Taskfile.yml  docker-compose.yml  index.html  release-please-config.json  sitemap.xml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs-check.yml  docs.yml  live-infra-uat.yml  publish.yml  release.yml
deploy/: index.html
deploy/docker/: index.html
deploy/kubernetes/: index.html
deploy/server/: index.html
discover/: index.html
discover/cli/: index.html
discover/sinks/: index.html
discover/targets/: index.html
docs/design/: architecture.md
docs/site/: mkdocs.yml
docs/site/docs/: index.md
docs/site/docs/assets/: extra.css
docs/site/docs/deploy/: docker.md  index.md  kubernetes.md  server.md
docs/site/docs/discover/: cli.md  index.md  sinks.md  targets.md
docs/site/docs/get-started/: first-scan.md  index.md  install.md
docs/site/docs/integrate/: index.md  kafka.md  source-of-truth.md  troubleshooting.md
docs/site/docs/probe/: index.md
docs/site/docs/reference/: cli.md  errors.md  glossary.md  index.md  scenario.md
docs/site/includes/: abbreviations.md
get-started/: index.html
get-started/first-scan/: index.html
get-started/install/: index.html
helm/rastreo/: .helmignore  Chart.yaml  values.yaml
helm/rastreo/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  service.yaml  servicemonitor.yaml
integrate/: index.html
integrate/kafka/: index.html
integrate/source-of-truth/: index.html
integrate/troubleshooting/: index.html
probe/: index.html
rastreo/: CLAUDE.md  Cargo.toml
rastreo-core/: CLAUDE.md  Cargo.toml
rastreo-core/src/: error.rs  lib.rs  pipeline.rs
rastreo-core/src/config/: mod.rs
rastreo-core/src/encoder/: mod.rs  ndjson.rs
rastreo-core/src/fuser/: mod.rs
rastreo-core/src/model/: device.rs  mod.rs  outcome.rs  target.rs
rastreo-core/src/prober/: mod.rs  tcp_connect.rs
rastreo-core/src/resolver/: mod.rs
rastreo-core/src/scheduler/: mod.rs
rastreo-core/src/sink/: file.rs  kafka.rs  memory.rs  mod.rs  stdout.rs
rastreo-core/tests/: kafka_integration.rs
rastreo-server/: CLAUDE.md  Cargo.toml
rastreo-server/src/: error.rs  lib.rs  main.rs  state.rs
rastreo-server/src/routes/: mod.rs  scans.rs
rastreo-server/tests/: api_scans.rs
rastreo/src/: main.rs
rastreo/src/cli/: discover.rs  mod.rs
rastreo/tests/: cli_discover.rs
reference/: index.html
reference/cli/: index.html
reference/errors/: index.html
reference/glossary/: index.html
reference/scenario/: index.html
scripts/: live_infra_uat.py
search/: search_index.json
