[workspace]
members = ["rastreo-core", "rastreo", "rastreo-server"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.88"
authors = ["David Flores <davidflores77@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/davidban77/rastreo"
homepage = "https://github.com/davidban77/rastreo"
description = "Enrichment-aware network discovery in Rust — TCP, UDP, HTTP, DNS, SNMP, and ARP probes fused into deduplicated DeviceRecord events on Kafka, file, or stdout."
keywords = ["network", "discovery", "kafka", "snmp", "observability"]
categories = ["command-line-utilities", "network-programming"]

[workspace.dependencies]
rastreo-core = { path = "rastreo-core", version = "0.2.0" }
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"
serde_json = "1"
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "net", "io-std", "io-util", "fs", "signal"] }
hickory-resolver = "0.26"
ipnet = { version = "2", features = ["serde"] }
rskafka = { version = "0.6.0", default-features = false, features = ["transport-tls"] }
chrono = { version = "0.4", default-features = false, features = ["std"] }
rustls = { version = "0.23", default-features = false, features = ["logging", "ring", "std", "tls12"] }
rustls-pki-types = { version = "1", features = ["std"] }
webpki-roots = "1"
insta = { version = "1.40", features = ["json", "yaml"] }
rstest = "0.26"
tempfile = "3"

[workspace.lints.clippy]
await_holding_lock = "deny"
