[package]
name = "rastreo-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["network-programming"]
description = "Core engine for rastreo — enrichment-aware network discovery library"
readme = "../README.md"

[features]
default = ["config"]
config = ["dep:serde_yaml_ng"]
http = []
kafka = ["dep:rskafka", "dep:chrono", "chrono/clock", "dep:rustls", "dep:rustls-pki-types", "dep:webpki-roots"]
snmp = []
arp = []

[dependencies]
serde = { workspace = true }
serde_yaml_ng = { workspace = true, optional = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
hickory-resolver = { workspace = true }
ipnet = { workspace = true }
rskafka = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
rustls-pki-types = { workspace = true, optional = true }
webpki-roots = { workspace = true, optional = true }

[dev-dependencies]
insta = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
