[package]
name = "rastreo-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["web-programming::http-server", "network-programming"]
description = "HTTP control plane for rastreo — enrichment-aware network discovery"
readme = "../README.md"

[features]
default = ["config"]
config = ["rastreo-core/config"]

[[bin]]
name = "rastreo-server"
path = "src/main.rs"

[dependencies]
rastreo-core = { workspace = true }
axum = "0.8"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["env"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
