[package]
name = "rastreo-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["web-programming::http-server", "network-programming"]
description = "HTTP control plane for rastreo — enrichment-aware network discovery"
readme = "../README.md"

[features]
default = ["config"]
config = ["rastreo-core/config"]

[[bin]]
name = "rastreo-server"
path = "src/main.rs"

[lib]
name = "rastreo_server"
path = "src/lib.rs"

[dependencies]
rastreo-core = { workspace = true }
axum = "0.8"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["env"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "timeout"] }

[dev-dependencies]
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }

[lints]
workspace = true
