[package]
name = "rastreo"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["command-line-utilities", "network-programming"]
description = "CLI for rastreo — enrichment-aware network discovery"
readme = "../README.md"

[features]
default = ["config"]
config = ["rastreo-core/config"]
kafka = ["rastreo-core/kafka"]

[[bin]]
name = "rastreo"
path = "src/main.rs"

[dependencies]
rastreo-core = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ipnet = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
